force-app/main/default/objects/CAZ_Solicitud_Complemento__c/CAZ_Solicitud_Complemento__c.object-meta.xml
<CustomObject>
    <description>Objeto para las solicitudes de complemento</description>
    <label>Solicitud de complemento (obs)</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Número de Solicitud de complemento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de complemento  (obs)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>