force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Capacidad_Retiro__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Capacidad_Retiro__c</fullName>
    <label>Capacidad de retiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>