force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Clave_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Clave_Distribuidor__c</fullName>
    <formula>CAZ_Distribuidor__r.ClaveJDE__c</formula>
    <label>Clave de distribuidor</label>
    <type>Text</type>
</CustomField>