force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Contacto__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitudes de complemento</relationshipLabel>
    <relationshipName>Solicitudes_de_complemento</relationshipName>
    <type>Lookup</type>
</CustomField>