force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Distribuidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuidor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de complemento (Distribuidor)</relationshipLabel>
    <relationshipName>Solicitudes_de_complemento2</relationshipName>
    <type>Lookup</type>
</CustomField>