force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Email_contacto__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Email_contacto__c</fullName>
    <formula>CAZ_Contacto__r.Email</formula>
    <label>Email contacto</label>
    <type>Text</type>
</CustomField>