force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Fecha__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>