force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Motivo_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Motivo_Rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>