force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Planta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Planta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitudes de complemento (Planta)</relationshipLabel>
    <relationshipName>Solicitudes_de_complemento1</relationshipName>
    <type>Lookup</type>
</CustomField>