force-app/main/default/objects/CAZ_Solicitud_Complemento__c/fields/CAZ_Tipo_Cemento__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Tipo_Cemento__c</fullName>
    <label>Tipo de cemento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>